--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <img src="~/Images/blizzhomestayadd.jpeg"/>
+    <div style="width:100%;float:left; text-align:center">
+    <img src="~/Images/blizzhomestayadd.jpeg"  alt="" style="max-width:100%;" title=""/>
+    </div>
 </div>
