--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="text-center">
+  Hello @Html.Label(@Model.username)!
     <!--<h1 class="display-4">Welcome</h1>
     <div style="width:100%;float:left; text-align:center">
     <img src="~/Images/blizzhomestayadd.jpeg"  alt="" style="max-width:100%;" title=""/>
