--- a/Pages/Booking.cshtml
+++ b/Pages/Booking.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div style="width:100%; text-align: center;"> 
-    <div>
+    <div style="width:100%; text-align: center;">
 <table>
     <tr>
         <td class="width-100 text-left grid-header"><label>Bookings</label></td>
@@ -13,6 +13,7 @@
     </tr>
 </table>
     </div>
+    <div style="width:100%; text-align: center;">
        <table class="table table-bordered table-responsive table-hover">  
     <tr class="grid-background">  
         <th>No.</th>  
@@ -40,4 +41,5 @@
         </tr>  
     }  
 </table>
+</div>
     </div> 
