login Page With Functionality

--- a/Views/Booking/Booking.cshtml
+++ b/Views/Booking/Booking.cshtml
@@ -29,7 +29,7 @@
     {  
         <tr>  
             <td>@usr.No</td>  
-            <td>@usr.GuestName</td>   
+            <td class="text-align-left">@usr.GuestName</td>   
             <td><a href="">@usr.Phone</a></td>   
             <td>@usr.CheckIn</td>   
             <td>@usr.CheckOut</td>   
