--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -363,3 +363,15 @@ background-color: cornflowerblue;
 	background: #ffe0e0;
 	border: 1px solid #a33a3a;
   }
+
+  .font-color-darkblue{
+	color : darkblue
+  }
+
+  .font-color-green{
+	color : green
+  }
+
+  .font-color-red{
+	color : red
+  }
