--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -308,7 +308,7 @@ background-color: cornflowerblue;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: -5px 2px;
   cursor: pointer;
   font-weight: 500;
 }
@@ -374,4 +374,36 @@ background-color: cornflowerblue;
 
   .font-color-red{
 	color : red
+  }
+
+  .width-20px {
+	width: 20px;
+  }
+
+  .width-20 {
+	width: 20%;
+  }
+
+  .width-15 {
+	width: 15%;
+  }
+
+  .width-25 {
+	width: 25%;
+  }
+
+  .width-10 {
+	width: 10%;
+  }
+
+  .width-80px {
+	width: 80px;
+  }
+
+  .width-80px {
+	width: 80px;
+  }
+
+  .width-140px {
+	width: 140px;
   }
