--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -404,6 +404,10 @@ background-color: cornflowerblue;
 	width: 80px;
   }
 
-  .width-140px {
-	width: 140px;
+  .width-70px {
+	width: 70px;
+  }
+
+  .width-50px {
+	width: 50px;
   }
