--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -11,22 +11,22 @@
     <div style="width:100%; text-align: center;">
        <table class="table table-bordered table-responsive table-hover">  
     <tr class="grid-background">  
-        <th>Guest Name</th>  
-        <th>Phone</th>  
-        <th>Check-In </th>  
-        <th>Check-Out</th>  
-        <th>Rooms</th>  
+        <th class="text-align-left">Guest Name</th>  
+        <th class="text-align-left">Phone</th>  
+        <th class="text-align-left">Check-In </th>  
+        <th class="text-align-left">Check-Out</th>  
+        <th class="text-align-right">Rooms</th>  
         <th></th>  
 
     </tr>  
   
         <tr>  
-            <td>@Html.TextBoxFor(m=>m.Book.GuestName)</td>   
-            <td>@Html.TextBoxFor(m=>m.Book.Phone)</td>   
-            <td>@Html.TextBoxFor(m=>m.Book.CheckIn, new{@class="width-80px"})</td>   
-            <td>@Html.TextBoxFor(m=>m.Book.CheckOut,new{@class="width-80px"})</td>   
+            <td>@Html.TextBoxFor(m=>m.Book.GuestName, new{@class="width-265px"})</td> 
+            <td>@Html.TextBoxFor(m=>m.Book.Phone, new{@class="width-120px"})</td>   
+            <td>@Html.TextBoxFor(m=>m.Book.CheckIn, new{@class="width-120px"})</td>   
+            <td>@Html.TextBoxFor(m=>m.Book.CheckOut,new{@class="width-120px"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.Rooms,new{@class="width-50px"})</td> 
-            <td><button class="button-blue">Book</button><button class="button-blue">Cancel</button></td> 
+            <td><button class="button-blue">Book</button></td> 
 
         </tr>  
 
