--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -400,8 +400,8 @@ background-color: cornflowerblue;
 	width: 80px;
   }
 
-  .width-80px {
-	width: 80px;
+  .width-120px {
+	width: 120px;
   }
 
   .width-70px {
@@ -410,4 +410,8 @@ background-color: cornflowerblue;
 
   .width-50px {
 	width: 50px;
+  }
+
+  .width-265px {
+	width: 265px;
   }
