Cancel or stayed UI changes

--- a/Views/Booking/AllBookings.cshtml
+++ b/Views/Booking/AllBookings.cshtml
@@ -45,7 +45,10 @@
             <td>
             @if (@usr.Status.Equals("Booked"))
             {
-                <a href="">Cancel</a><label> / </label><a href="">Stayed</a>
+                <div class="width-70px">
+                <img src="~/Images/GreenTick.jpg" style="width:45%">
+                <img src="~/Images/Cancel.jpg" style="width:45%">
+                </div>
             }
             </td>   
   
