--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -415,3 +415,9 @@ background-color: cornflowerblue;
   .width-265px {
 	width: 265px;
   }
+  .width-70px {
+	width: 70px;
+  }
+  .width-45 {
+	width: 45%;
+  }
