Site logo & Fav Icon added

--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -1,6 +1,6 @@
 @model oneHut.Models.LoginModel
 @{
-    ViewData["Title"] = "Login Page";
+    ViewData["Title"] = "Login";
 }
 <head>
   <meta charset="UTF-8">
