--- a/Views/Booking/Booking.cshtml
+++ b/Views/Booking/Booking.cshtml
@@ -1,6 +1,6 @@
 
 @{
-    ViewData["Title"] = "Booking Page";
+    ViewData["Title"] = "Booking";
 }
 <div> @{
     Html.RenderPartial("AddBooking");   
