Check in out image added

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -404,6 +404,10 @@ background-color: cornflowerblue;
 	width: 110px;
   }
 
+  .width-120px {
+	width: 120px;
+  }
+
   .width-70px {
 	width: 70px;
   }
