--- a/Views/Booking/AllBookings.cshtml
+++ b/Views/Booking/AllBookings.cshtml
@@ -46,9 +46,10 @@
             <td>
             @if (@usr.Status.Equals("Booked"))
             {
-                <div class="width-70px">
-                <img src="~/Images/GreenTick.jpg" style="width:45%">
-                <img src="~/Images/Cancel.jpg" style="width:45%">
+                <div class="width-120px">
+                <img src="~/Images/CheckinBlue2.jpg" style="width:31%">
+                <img src="~/Images/CheckOutGreen1.jpg" style="width:28%">
+                <img src="~/Images/Cancel.jpg" style="width:28%">
                 </div>
             }
             </td>   
