--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -21,10 +21,10 @@
     </tr>  
   
         <tr>  
-            <td>@Html.TextBoxFor(m=>m.Book.GuestName, new{@class="width-220px"})</td> 
-            <td>@Html.TextBoxFor(m=>m.Book.Phone, new{@class="width-110px"})</td>   
-            <td>@Html.TextBoxFor(m=>m.Book.CheckIn, new{@class="width-110px"})</td>   
-            <td>@Html.TextBoxFor(m=>m.Book.CheckOut,new{@class="width-110px"})</td>   
+            <td>@Html.TextBoxFor(m=>m.Book.GuestName, new{@class="width-200px"})</td> 
+            <td>@Html.TextBoxFor(m=>m.Book.Phone, new{@class="width-165px"})</td>   
+            <td>@Html.TextBoxFor(m=>m.Book.CheckIn, new{@class="width-165px datepicker"})</td>   
+            <td>@Html.TextBoxFor(m=>m.Book.CheckOut,new{@class="width-165px"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.Rooms,new{@class="width-50px"})</td> 
             <td><button class="button-blue">Book</button></td> 
 
