save image added

--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -23,10 +23,10 @@
         <tr>  
             <td>@Html.TextBoxFor(m=>m.Book.GuestName, new{@class="width-158px"})</td> 
             <td>@Html.TextBoxFor(m=>m.Book.Phone, new{@class="width-95px"})</td>   
-            <td>@Html.TextBoxFor(m=>m.Book.CheckIn, new{@class="width-158px datepicker"})</td>   
-            <td>@Html.TextBoxFor(m=>m.Book.CheckOut,new{@class="width-158px"})</td>   
+            <td>@Html.TextBoxFor(m=>m.Book.CheckIn, new{@class="width-165px datepicker"})</td>   
+            <td>@Html.TextBoxFor(m=>m.Book.CheckOut,new{@class="width-165px"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.Rooms,new{@class="width-50px"})</td> 
-            <td><button class="button-blue">Book</button></td> 
+            <td class="width-5"><img src="~/Images/book1.jpg" style="width:80%"></td> 
 
         </tr>  
 
