--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -21,12 +21,12 @@
     </tr>  
   
         <tr>  
-            <td>@Html.TextBoxFor(m=>m.Book.GuestName, new{@class="width-158px"})</td> 
+            <td>@Html.TextBoxFor(m=>m.Book.GuestName, new{@class="width-200px"})</td> 
             <td>@Html.TextBoxFor(m=>m.Book.Phone, new{@class="width-95px"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.CheckIn, new{@class="width-165px datepicker"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.CheckOut,new{@class="width-165px"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.Rooms,new{@class="width-50px"})</td> 
-            <td class="width-5"><img src="~/Images/book1.jpg" style="width:80%"></td> 
+            <td class="width-5"><img src="~/Images/book1.jpg" style="width:30px"></td> 
 
         </tr>  
 
