--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -428,6 +428,10 @@ background-color: cornflowerblue;
 	width: 50px;
   }
 
+  .width-190px {
+	width: 190px;
+  }
+
   .width-200px {
 	width: 200px;
   }
