Code refactored - One Place for DB

--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -26,7 +26,7 @@
             <td>@Html.TextBoxFor(m=>m.Book.CheckIn, new{@class="width-160px datepicker"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.CheckOut,new{@class="width-160px"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.Rooms,new{@class="width-50px"})</td> 
-            <td class="width-5"><img src="~/Images/book1.jpg" style="width:30px"></td> 
+            <td class="width-5"><img src="~/Images/book1.jpg" style="width:30px" title="Save"></td> 
 
         </tr>  
 
