--- a/Views/Booking/AllBookings.cshtml
+++ b/Views/Booking/AllBookings.cshtml
@@ -47,9 +47,9 @@
             @if (@usr.Status.Equals("Booked"))
             {
                 <div class="width-120px">
-                <img src="~/Images/CheckinBlue2.jpg" style="width:32%">
-                <img src="~/Images/CheckOutGreen1.jpg" style="width:28%">
-                <img src="~/Images/Cancel.jpg" style="width:28%">
+                <img src="~/Images/CheckinBlue2.jpg" style="width:32%" title="Check in">
+                <img src="~/Images/CheckOutGreen1.jpg" style="width:28%" title="Check out">
+                <img src="~/Images/Cancel.jpg" style="width:28%" title="Cancel Booking">
                 </div>
             }
             </td>   
