--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -8,6 +8,7 @@
     </tr>
 </table>
     </div>
+    <form class="Booking" action="/Booking/Booking" method="post">
     <div style="width:100%; text-align: center;">
        <table class="table table-bordered table-responsive table-hover">  
     <tr class="grid-background">  
@@ -21,15 +22,19 @@
     </tr>  
   
         <tr>  
+            
             <td>@Html.TextBoxFor(m=>m.Book.GuestName, new{@class="width-182px"})</td> 
             <td>@Html.TextBoxFor(m=>m.Book.Phone, new{@class="width-95px"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.CheckIn, new{@class="width-160px datepicker"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.CheckOut,new{@class="width-160px"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.Rooms,new{@class="width-50px"})</td> 
-            <td class="width-5"><img src="~/Images/book1.jpg" style="width:30px" title="Save"></td> 
+            <td class="width-5">
+                <button type="submit" class="style-all-unset">
+                <img src="~/Images/book1.jpg" style="width:30px" title="Save"></button></td> 
 
         </tr>  
 
 </table>
 </div>
+</form>
     </div> 
