--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -313,6 +313,10 @@ background-color: cornflowerblue;
   font-weight: 500;
 }
 
+.style-all-unset {
+	all: unset;
+}
+
 .width-80 {
   width: 80%;
 }
@@ -442,4 +446,8 @@ background-color: cornflowerblue;
 
   .width-45 {
 	width: 45%;
+  }
+
+  .display-none {
+	display: none;
   }
