--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -23,7 +23,7 @@
   
         <tr>  
             
-            <td>@Html.TextBoxFor(m=>m.Book.GuestName, new{@class="width-182px"})</td> 
+            <td>@Html.TextBoxFor(m=>m.Book._id, new{@class="display-none"})@Html.TextBoxFor(m=>m.Book.GuestName, new{@class="width-182px"})</td> 
             <td>@Html.TextBoxFor(m=>m.Book.Phone, new{@class="width-95px"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.CheckIn, new{@class="width-160px datepicker"})</td>   
             <td>@Html.TextBoxFor(m=>m.Book.CheckOut,new{@class="width-160px"})</td>   
