--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,3 +1,44 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+.rate {
+    float: left;
+    height: 46px;
+    padding: 0 10px;
+}
+.rate:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+}
+.rate:not(:checked) > label {
+    float:right;
+    width:1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:30px;
+    color:#ccc;
+}
+.rate:not(:checked) > label:before {
+    content: '★ ';
+}
+.rate > input:checked ~ label {
+    color: #ffc700;    
+}
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+    color: #deb217;  
+}
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+    color: #c59b08;
+}
+
+/* Modified from: https://github.com/mukulkant/Star-rating-using-pure-css */
 html {
   font-size: 14px;
 }
@@ -317,14 +358,21 @@ background-color: cornflowerblue;
 	all: unset;
 }
 
-.width-80 {
-  width: 80%;
+.width-15 {
+	width: 15%;
 }
-
 
 .width-60 {
 	width: 60%;
 }
+
+.width-70 {
+	width: 70%;
+}
+
+.width-80 {
+	width: 80%;
+  }
 
 .width-95 {
 	width: 95%;
@@ -401,6 +449,10 @@ background-color: cornflowerblue;
 	width: 5%;
   }
 
+  .width-10 {
+	width: 10%;
+  }
+
   .width-15 {
 	width: 15%;
   }
@@ -409,8 +461,8 @@ background-color: cornflowerblue;
 	width: 25%;
   }
 
-  .width-10 {
-	width: 10%;
+  .width-65 {
+	width: 65%;
   }
 
   .width-50px {
@@ -462,3 +514,9 @@ background-color: cornflowerblue;
   }
 
 
+.text-area {
+	overflow-y: scroll;
+    resize: none;
+    width: 875px;
+    height: 80px;
+}
