Search UI Added

--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -58,7 +58,7 @@
 
 </div>
 <div>
-    <table>
+    <table class="width-100">
     <tr>
         <td class="text-left grid-header width-80"><label>Additional Infomation</label></td>
         <td><div class="rate">
