--- a/Views/Booking/AllBookings.cshtml
+++ b/Views/Booking/AllBookings.cshtml
@@ -4,10 +4,12 @@
        
 <table>
     <tr>
-        <td class="text-left grid-header"><label>Bookings</label></td>
-        <td class="width-70"><input type="text" id="search" name="search" value="Guest Name / Phone">
-        <input type="text" id="checkin" name="checkin" value="Check in">
-        <input type="text" id="checkout" name="checkout" value="Check out"></td>
+        <td class="text-left grid-header width-15"><label>Bookings</label></td>
+        <td class="text-align-left"><input type="text" id="search" name="search" value="Guest Name / Phone">
+        @Html.TextBoxFor(m => m.Book.CheckIn, new { @type="date", @class = "datepicker width-160px" })
+        @Html.TextBoxFor(m => m.Book.CheckOut, new { @type="date", @class = "datepicker width-160px" }) 
+        <a href="">
+                <img src="~/Images/Search.jpg" style="width:6%" title="Cancel Booking"></a></td>
         <td class="width-15"><input type="checkbox" id="todaybk" name="todaybk" value="Today" checked> Today 
         <input type="checkbox" id="weekbk" name="weekbk" value="Week" checked> Week</td>
         
