--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -36,7 +36,7 @@
   
         <tr>  
             
-            <td>@Html.TextBoxFor(m=>m.Book._id, new{@class="display-none"})@Html.TextBoxFor(m=>m.Book.GuestName, new{@class="width-182px"})</td> 
+            <td>@Html.TextBoxFor(m=>m.Book._id, new{@class="display-none"})@Html.TextBoxFor(m=>m.Book.GuestName, new{@class="width-225px"})</td> 
             <td>@Html.TextBoxFor(m=>m.Book.Phone, new{@class="width-95px"})</td>   
             <td>@if (String.IsNullOrEmpty(Model.Book._id))
             {
@@ -60,18 +60,18 @@
 <div>
     <table class="width-100">
     <tr>
-        <td class="text-left grid-header width-80"><label>Additional Infomation</label></td>
+        <td class="text-left grid-header"><label>Additional Infomation</label></td>
         <td><div class="rate">
     <input type="radio" id="star5" name="rate" value="5" />
-    <label for="star5" title="text">5 stars</label>
+    <label for="star5" title="">5 stars</label>
     <input type="radio" id="star4" name="rate" value="4" />
-    <label for="star4" title="text">4 stars</label>
+    <label for="star4" title="">4 stars</label>
     <input type="radio" id="star3" name="rate" value="3" />
-    <label for="star3" title="text">3 stars</label>
+    <label for="star3" title="">3 stars</label>
     <input type="radio" id="star2" name="rate" value="2" />
-    <label for="star2" title="text">2 stars</label>
+    <label for="star2" title="">2 stars</label>
     <input type="radio" id="star1" name="rate" value="1" />
-    <label for="star1" title="text">1 star</label>
+    <label for="star1" title="">1 star</label>
   </div></td>
        
     </tr>
