Update Issue fix

--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -31,7 +31,7 @@
         <th class="text-align-left">Phone</th>  
         <th class="text-align-left">Check-In </th>  
         <th class="text-align-left">Check-Out</th>  
-        <th class="text-align-right">Rooms</th>  
+        <th class="text-align-left">Rooms</th>  
         
 
     </tr>  
