--- a/Views/Booking/AllBookings.cshtml
+++ b/Views/Booking/AllBookings.cshtml
@@ -1,7 +1,7 @@
 @model oneHut.Models.BookingModel
 <div style="width:100%; text-align: center;"> 
     <div style="width:100%; text-align: center;">
-       
+<form action="/Booking/SearchBooking" method="post">     
 <table>
     <tr>
         <td class="text-left grid-header width-15"><label>Bookings</label></td>
@@ -9,11 +9,11 @@
             <table>
                 <tr>
                     <td>
-                        @Html.TextBoxFor(m => m.Book.GuestName, new { @class = "width-160px" })
-                        @Html.TextBoxFor(m => m.Book.CheckIn, new { @type="date", @class = "datepicker width-120px" })
-                        @Html.TextBoxFor(m => m.Book.CheckOut, new { @type="date", @class = "datepicker width-120px" }) 
-                <a href="">
-                <img src="~/Images/Search.jpg" style="width:6%" title="Search Booking"></a>
+                        @Html.TextBoxFor(m => m.Guest, new { @class = "width-160px" })
+                        @Html.TextBoxFor(m => m.CheckIn, new { @type="date", @class = "datepicker width-120px" })
+                        @Html.TextBoxFor(m => m.CheckOut, new { @type="date", @class = "datepicker width-120px" }) 
+                <button type="submit" class="style-all-unset width-40px">
+                <img src="~/Images/Search.jpg" style="width:100%" title="Search Booking"></button>
                     </td>
                 </tr>
                 <tr>
@@ -22,11 +22,15 @@
                 </tr>
             </table>
         </td>
-        <td class="width-10"><input type="checkbox" id="todaybk" name="todaybk" value="Today"> Today 
+        <td class="width-10">
+            <a href="/Booking/TodayBooking" class="style-all-unset">
+            @if (Model.IsToday) { <i class="fa fa-check-square-o" style="font-size:24px"></i>}
+            else {<i style="font-size:24px" class="fa">&#xf096;</i>} Today</a>
         </td>
         
     </tr>
 </table>
+</form>
     </div>
     <div style="width:100%; text-align: center;">
         
