--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -441,6 +441,10 @@ background-color: cornflowerblue;
 	width: 20px;
   }
 
+  .width-40px {
+    width: 40px;
+    }
+
   .width-20 {
 	width: 20%;
   }
