--- a/Views/Home/Feature.cshtml
+++ b/Views/Home/Feature.cshtml
@@ -8,5 +8,12 @@
 </head>
 <body>
 
+<i class="fa fa-lock" style="font-size:20px;color:blue;"></i>
+<i class="fa fa-lock-open" style="font-size:20px;color:blue;"></i>
+<i class="fa-solid fa-lock-open"></i>
+<i class="fa-sharp fa-solid fa-lock-open"></i>
+<i class="fa fa-check-square-o" style="font-size:24px"></i>
+<i style="font-size:24px" class="fa">&#xf096;</i>
+<i class="fa fa-square-o" style="font-size:24px"></i>
 </body>
 </html>
