--- a/Views/Home/Feature.cshtml
+++ b/Views/Home/Feature.cshtml
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-
+@DateTime.Now.Date
 <i class="fa fa-lock" style="font-size:20px;color:blue;"></i>
 <i class="fa fa-lock-open" style="font-size:20px;color:blue;"></i>
 <i class="fa-solid fa-lock-open"></i>
