--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -485,6 +485,10 @@ background-color: cornflowerblue;
     width: 75%;
     }
 
+    .width-99 {
+      width: 99%;
+      }
+
   .width-50px {
 	width: 50px;
   }
@@ -542,4 +546,8 @@ background-color: cornflowerblue;
     resize: none;
     width: 100%;
     height: 80px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
