--- a/Views/Booking/AllBookings.cshtml
+++ b/Views/Booking/AllBookings.cshtml
@@ -10,14 +10,10 @@
                 <tr>
                     <td>
                         @Html.TextBoxFor(m => m.Guest, new { @class = "width-160px" })
-                        @Html.TextBoxFor(m => m.CheckIn, new { @type="date", @class = "datepicker width-120px" })
-                        @Html.TextBoxFor(m => m.CheckOut, new { @type="date", @class = "datepicker width-120px" }) 
+                        @Html.TextBoxFor(m => m.CheckIn, "{0:d}", new { @type="date", @class = "datepicker width-120px" })
+                        @Html.TextBoxFor(m => m.CheckOut, "{0:d}", new { @type="date", @class = "datepicker width-120px", @value="09/16/2022" }) 
                 <button type="submit" class="style-all-unset width-40px">
                 <img src="~/Images/Search.jpg" style="width:100%" title="Search Booking"></button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
                     </td>
                 </tr>
             </table>
