--- a/Views/Booking/AllBookings.cshtml
+++ b/Views/Booking/AllBookings.cshtml
@@ -39,7 +39,15 @@
         <th>Check-Out</th>  
         <th>Rooms</th>  
         <th>Status</th>  
-        <th></th>  
+        <th>
+             <select name="dropDown" id="dropDown">
+                <option value="#heading1">1</option>
+                <option value="#heading2">2</option>
+                <option value="#heading3">3</option>
+                <option value="#heading3">4</option>
+                <option value="#heading3">5</option>
+            </select>
+        </th>  
 
     </tr>  
     @foreach (var usr in Model.Bookings)  
