--- a/Views/Booking/AllBookings.cshtml
+++ b/Views/Booking/AllBookings.cshtml
@@ -1,7 +1,7 @@
 @model oneHut.Models.BookingModel
 <script type="text/javascript">
 function changeSelect() {
-        document.getElementById("search").click();
+        document.getElementById("nextPage").click();
 }
 </script>
 <form action="/Booking/SearchBooking" method="post" name="FormBooking">   
@@ -32,7 +32,8 @@ function changeSelect() {
         
     </tr>
 </table>
-
+</form>
+<form action="/Booking/NextPageBooking" method="post" name="FormBooking"> 
     </div>
     <div style="width:100%; text-align: center;">
         
@@ -49,6 +50,7 @@ function changeSelect() {
             @if (Model.TotalPages > Model.TakeItem)
             {
                 @Html.DropDownListFor(m => m.CurrentPage, new SelectList(Model.Pages), new {  onchange="changeSelect()"})
+                <button type="submit" class="style-all-unset display-none" id="nextPage"></button>
             }
         </th>  
 
@@ -111,4 +113,5 @@ function changeSelect() {
 
 </div>
     </div> 
-    </form>
+
+</form>
